--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
   <title>CSS Grid Layout - FollowAndrew</title>
 </head>
 <body>
-  
+  <div id="site-wrap">
+
+    <div class="header">
+      HEADER
+    </div> <!-- header -->
+
+    <div class="featured_header">
+      FEATURED HEADER
+    </div> <!-- featured_header -->
+
+    <div class="featured_main">
+      FEATURED MAIN
+    </div> <!-- featured_main -->
+
+    <div class="featured_profile">
+      FEATURED PROFILE
+    </div> <!-- featured_profile -->
+
+    <div class="content">
+      CONTENT
+    </div> <!-- content -->
+    
+    <div class="footer">
+      FOOTER
+    </div> <!-- footer -->
+  </div> <!-- site-wrap -->
 </body>
 </html>
